[main-private] refactoring of DistributedQueryExecutor impl. replacing driver with database cache